--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-clean-css": "^3.9.0",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
